[package]
name = "lambda_function"
version = "0.1.0"
edition = "2018"

[dependencies]
lambda_http = { version = "0.11.1" }
serde = "1.0"
serde_json = "1.0"
tokio = "1.0"
reqwest = { version = "0.11", features = ["json"] }
aws-sdk-dynamodb = { version = "1.34.0" }
uuid = { version = "1.7.0", features = ["v4"] }

[[bin]]
name = "bootstrap"
path = "src/main.rs"
